--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -149,7 +149,7 @@
 
   <script>
     // Configuration - Update this with your backend URL
-    const API_BASE = 'https://your-backend-app.onrender.com'; // Replace with your backend URL
+    const API_BASE = 'https://dcoder-backend-acka.onrender.com'; // Replace with your backend URL
     
     // Check backend status on load
     window.addEventListener('load', checkBackendStatus);
